k8s/nginx/nginx-app/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace:
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
