k8s/nginx/nginx-app/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cubr.myguest.virtualbox.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  # Uncomment the following lines if you want to configure TLS
  # tls:
  # - hosts:
  #   - example.com
  #   secretName: example-tls  # Replace with your actual TLS secret name
